--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-mediapipe == 0.8.4
-opencv-python == 4.6.0.66
-tensorflow == 2.9.0
-scikit-learn == 1.0.2
-matplotlib == 3.5.1
-protobuf<3.20,>=3.9.2
+mediapipe == 0.10.21
+opencv-python == 4.10.0.82
+tensorflow < 2.20
+scikit-learn == 1.7.1
+matplotlib == 3.10.6
+protobuf < 5
